--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports: 
-    magrittr
+    dplyr,
+    magrittr,
+    stringr
 URL: https://github.com/curso-r/munifacil
 BugReports: https://github.com/curso-r/munifacil/issues
