--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,11 @@ RoxygenNote: 7.1.2
 Imports: 
     dplyr,
     magrittr,
-    stringr
+    scales,
+    stringi,
+    stringr,
+    usethis
 URL: https://github.com/curso-r/munifacil
 BugReports: https://github.com/curso-r/munifacil/issues
+Depends: 
+    R (>= 2.10)
