--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,25 @@
 Package: munifacil
-Title: What the Package Does (One Line, Title Case)
+Title: Pacote para facilitar o join com nome de municipios
 Version: 0.0.0.9000
 Authors@R: 
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: O pacote munifacil tem como objetivo facilitar a união de colunas de nome de município com o respectivo código do IBGE. Isso é útil para posteriormente realizar procedimentos de join usando como chave a coluna do código do IBGE.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 Imports: 
     dplyr,
     magrittr,
+    purrr,
     readr,
     rlang,
     scales,
     stringi,
     stringr,
+    tidyr,
     usethis
 URL: https://github.com/curso-r/munifacil
 BugReports: https://github.com/curso-r/munifacil/issues
